Change logic get episode

--- a/app/mock/data.html
+++ b/app/mock/data.html
@@ -2,13 +2,13 @@
 <html>
 
 <head>
-    <title>Assistir Animes.net - Animes</title>
+    <title>Assistir Anime Boruto Naruto Next Generations - Episódio 35 Online</title>
     <meta charset="utf-8" />
     <meta name="format-detection" content="telephone=no" />
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height"
     />
-    <meta name="description" content="Assistir animes, animes legendados, animes dublados, animes gratis no celular, tablet, computador">
-    <meta name="keywords" content="assistir animes, animes, naruto shippuuden, boruto, dragon ball super, one piece, kimi no na wa">
+    <meta name="description" content="Assistir animes, assistir boruto naruto next generations - episódio 35 online gratis no celular, tablet, computador">
+    <meta name="keywords" content="assistir animes, anime, boruto naruto next generations - episódio 35">
     <meta name="google-site-verification" content="N3pRFLda76lACtCm-5lAArdpTs09xDljcPjadcsVlAo" />
     <meta name="robots" content="index, follow">
     <script src="/cdn-cgi/apps/head/Y73_p9_zKDmn4LKOgf59J0tiFww.js"></script>
@@ -17,7 +17,7 @@
         window.__cfRocketOptions = {
             byc: 0,
             p: 0,
-            petok: "d4e239057813c64ffdd90af54c45d36329434116-1511894279-1800"
+            petok: "aaf0c26208e2e5a8ff1391cf8a89e735ac6dff2b-1511964983-1800"
         };
         //]]>
     </script>
@@ -86,102 +86,45 @@
             </ul>
         </div>
     </div>
+    <link href="http://vjs.zencdn.net/5.12.6/video-js.min.css" rel="stylesheet">
+    <script data-rocketsrc="http://vjs.zencdn.net/5.12.6/video.min.js" type="text/rocketscript"></script>
     <home data-page="true">
         <header class="header-bar">
             <button class="btn icon icon-menu pull-left" data-side-panel-id="side-panel-example"></button>
             <div class="center">
-                <h1 class="title">Animes</h1>
+                <h1 class="title">Assistir Boruto Naruto Next Generations - Episódio 35 Online</h1>
             </div>
         </header>
-        <div class="content">
-            <div id="animes">
-                <ul class="list">
-                    <li>
-                        <a href="http://assistiranimes.net/animes/a">A</a>
-                    </li>
-                    <li>
-                        <a href="http://assistiranimes.net/animes/b">B</a>
-                    </li>
-                    <li>
-                        <a href="http://assistiranimes.net/animes/c">C</a>
-                    </li>
-                    <li>
-                        <a href="http://assistiranimes.net/animes/d">D</a>
-                    </li>
-                    <li>
-                        <a href="http://assistiranimes.net/animes/e">E</a>
-                    </li>
-                    <li>
-                        <a href="http://assistiranimes.net/animes/f">F</a>
-                    </li>
-                    <li>
-                        <a href="http://assistiranimes.net/animes/g">G</a>
-                    </li>
-                    <li>
-                        <a href="http://assistiranimes.net/animes/h">H</a>
-                    </li>
-                    <li>
-                        <a href="http://assistiranimes.net/animes/i">I</a>
-                    </li>
-                    <li>
-                        <a href="http://assistiranimes.net/animes/j">J</a>
-                    </li>
-                    <li>
-                        <a href="http://assistiranimes.net/animes/k">K</a>
-                    </li>
-                    <li>
-                        <a href="http://assistiranimes.net/animes/l">L</a>
-                    </li>
-                    <li>
-                        <a href="http://assistiranimes.net/animes/m">M</a>
-                    </li>
-                    <li>
-                        <a href="http://assistiranimes.net/animes/n">N</a>
-                    </li>
-                    <li>
-                        <a href="http://assistiranimes.net/animes/o">O</a>
-                    </li>
-                    <li>
-                        <a href="http://assistiranimes.net/animes/p">P</a>
-                    </li>
-                    <li>
-                        <a href="http://assistiranimes.net/animes/q">Q</a>
-                    </li>
-                    <li>
-                        <a href="http://assistiranimes.net/animes/r">R</a>
-                    </li>
-                    <li>
-                        <a href="http://assistiranimes.net/animes/s">S</a>
-                    </li>
-                    <li>
-                        <a href="http://assistiranimes.net/animes/t">T</a>
-                    </li>
-                    <li>
-                        <a href="http://assistiranimes.net/animes/u">U</a>
-                    </li>
-                    <li>
-                        <a href="http://assistiranimes.net/animes/v">V</a>
-                    </li>
-                    <li>
-                        <a href="http://assistiranimes.net/animes/w">W</a>
-                    </li>
-                    <li>
-                        <a href="http://assistiranimes.net/animes/x">X</a>
-                    </li>
-                    <li>
-                        <a href="http://assistiranimes.net/animes/y">Y</a>
-                    </li>
-                    <li>
-                        <a href="http://assistiranimes.net/animes/z">Z</a>
-                    </li>
-                </ul>
+        <nav class="tabs header-tabs">
+            <div class="tab-items">
+                <a class="tab-item">Player 1</a>
+                <a class="tab-item">Player 2</a>
+            </div>
+            <div class="tab-indicator"></div>
+        </nav>
+        <div class="content" data-tab-contents="true" data-disable-swipe="false" data-tab-default="1">
+            <div class="tab-content">
+                <div class="padded-full">
+                    <h1>Player 1</h1>
+                    <p>
+                        <video id="my-video" class="video-js vjs-default-skin vjs-16-9" controls preload="auto" width="100%" height="auto" data-setup='[]'>
+                            <source src="https://www.blogger.com/video-play.mp4?contentId=61e3828339322e6c" type='video/mp4' />
+                        </video>
+                    </p>
+                </div>
+            </div>
+            <div class="tab-content">
+                <div class="padded-full">
+                    <h1>Player 2</h1>
+                    <p>
+                        <video width="100%" height="auto" controls>
+                            <source src="https://www.blogger.com/video-play.mp4?contentId=61e3828339322e6c" type="video/mp4" />
+                        </video>
+                    </p>
+                </div>
             </div>
         </div>
     </home>
-    <script data-rocketsrc="http://listjs.com/assets/javascripts/list.min.js" type="text/rocketscript"></script>
-    <script type="text/rocketscript">
-        var options = { valueNames: [ 'name' ] }; var animesList = new List('animes', options);
-    </script>
     <script data-rocketsrc="http://assistiranimes.net/js/lazysizes.min.js" type="text/rocketscript"></script>
     <script data-rocketsrc="http://assistiranimes.net/js/phonon.min.js" type="text/rocketscript"></script>
     <script data-rocketsrc="http://assistiranimes.net/app.js" type="text/rocketscript"></script>
